--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <link rel="stylesheet" href="css/skins/color-5.css" class="alternate-style" title="color-5" disabled>
 
   <link rel="stylesheet" href="css/style-switcher.css">
+   <link rel="icon" href="img/asaduzzaman-shahin.png" type="image/icon type">
 </head>
 
 <body class="dark">
